# noise-decrease

./: ai_model.py  app.py  output_data.txt  pyproject.toml  readme.md  sound.py
__MACOSX/project/models/: ._Noise_Lower_LSTM_vol_1.pkl
__MACOSX/project/src/: ._.ipynb_checkpoints  ._Noise_Lower_LSTM.ipynb  ._Noise_Lower_LSTM_old.ipynb  ._Noise_Lower_LSTM_vol1.ipynb
project/src/: Data_Precleaning.ipynb  Noise_Lower_CNN.ipynb  Noise_Lower_LSTM.ipynb  Noise_Lower_LSTM_old.ipynb  Noise_Lower_LSTM_vol1.ipynb
project/src/.ipynb_checkpoints/: Noise_Lower_LSTM-checkpoint.ipynb
static/css/: styles.css
static/js/: script.js
templates/: index.html
